<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username Label -->
    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        app:layout_constraintBottom_toTopOf="@id/username_text_field"
        app:layout_constraintStart_toStartOf="@id/username_text_field" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/username_text_field"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/username_input"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@id/username_title"
        app:layout_constraintBottom_toTopOf="@id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/username_text_field"
        app:layout_constraintBottom_toTopOf="@id/password_text_field"
        app:layout_constraintStart_toStartOf="@id/password_text_field" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password_text_field"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintBottom_toTopOf="@id/passwordAgain_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/password_visibility_button" />

    <!-- Password Visibility Button -->
    <ImageButton
        android:id="@+id/password_visibility_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/baseline_visibility_24"
        android:contentDescription="@string/password_visibility"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintBottom_toTopOf="@id/passwordAgain_title"
        app:layout_constraintStart_toEndOf="@id/password_text_field"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Confirm Password Label -->
    <TextView
        android:id="@+id/passwordAgain_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordAgain_label"
        app:layout_constraintTop_toBottomOf="@id/password_text_field"
        app:layout_constraintBottom_toTopOf="@id/passwordAgain_text_field"
        app:layout_constraintStart_toStartOf="@id/passwordAgain_text_field" />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/passwordAgain_text_field"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/passwordAgain_input"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/passwordAgain_title"
        app:layout_constraintBottom_toTopOf="@id/sign_in_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/passwordAgain_visibility_button" />

    <!-- Confirm Password Visibility Button -->
    <ImageButton
        android:id="@+id/passwordAgain_visibility_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/baseline_visibility_24"
        android:contentDescription="@string/confirm_password_visibility"
        app:layout_constraintTop_toBottomOf="@id/passwordAgain_title"
        app:layout_constraintBottom_toTopOf="@id/sign_in_label"
        app:layout_constraintStart_toEndOf="@id/passwordAgain_text_field"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sign in label -->
    <TextView
        android:id="@+id/sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_label"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/passwordAgain_text_field"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Register Button -->
    <Button
        android:id="@+id/register_btn"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:text="@string/register_label"
        app:layout_constraintTop_toBottomOf="@id/sign_in_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:text="@string/cancel_label"
        app:layout_constraintTop_toBottomOf="@id/sign_in_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
