<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".ui.LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/secondary_color"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/incorrect_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Incorrect login text -->
    <TextView
        android:id="@+id/incorrect_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_login"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@color/background_secondary"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/username_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <!-- Username label -->
    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/incorrect_login_text"
        app:layout_constraintBottom_toTopOf="@id/username_text_field"
        app:layout_constraintStart_toStartOf="@id/username_text_field" />

    <!-- Username input -->
    <EditText
        android:id="@+id/username_text_field"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/username_input"
        android:inputType="text"
        android:maxWidth="320dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/background_secondary"
        app:layout_constraintBottom_toTopOf="@id/password_title"
        app:layout_constraintStart_toStartOf="@id/password_text_field"
        app:layout_constraintTop_toBottomOf="@id/username_title" />

    <!-- Password label -->
    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/username_text_field"
        app:layout_constraintBottom_toTopOf="@id/password_text_field"
        app:layout_constraintStart_toStartOf="@id/password_text_field" />

    <!-- Password input -->
    <EditText
        android:id="@+id/password_text_field"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password_input"
        android:layout_marginStart="48dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/background_secondary"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintBottom_toTopOf="@id/remember_checkbox"
        app:layout_constraintEnd_toStartOf="@id/password_visibility_button"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Show password button -->
    <ImageButton
        android:id="@+id/password_visibility_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/password_visibility"
        android:src="@drawable/baseline_visibility_24"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintBottom_toTopOf="@id/remember_checkbox"
        app:layout_constraintStart_toEndOf= "@id/password_text_field"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Remember me checkbox -->
    <CheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_text_field"
        app:layout_constraintBottom_toTopOf="@id/create_acc_label"
        app:layout_constraintStart_toStartOf= "@id/password_text_field" />

    <!-- Remember me label -->
    <TextView
        android:id="@+id/remember_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me_label"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_text_field"
        app:layout_constraintBottom_toTopOf="@id/create_acc_label"
        app:layout_constraintStart_toEndOf= "@id/remember_checkbox" />

    <!-- Don't have an account? -->
    <TextView
        android:id="@+id/create_acc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc_label"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/remember_checkbox"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toStartOf="@+id/create_acc_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- Sign up label -->
    <TextView
        android:id="@id/create_acc_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#0000FF"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/remember_checkbox"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_acc_label" />

    <!-- Login button -->
    <Button
        android:id="@+id/login_btn"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/login_label"
        android:backgroundTint="@color/secondary_color"
        app:layout_constraintTop_toBottomOf="@id/create_acc_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- Cancel button -->
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/cancel_label"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/secondary_color"
        app:layout_constraintTop_toBottomOf="@id/create_acc_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>